fix errors on raspberry pi

--- a/mjpg-streamer-experimental/plugins/input_fb/CMakeLists.txt
+++ b/mjpg-streamer-experimental/plugins/input_fb/CMakeLists.txt
@@ -13,14 +13,12 @@ if (PLUGIN_INPUT_FB)
     
     if (HAS_RASPI)
       add_definitions(-DLINUX -D_GNU_SOURCE -DRASPI)
+    elseif (X11_FOUND)
+      add_definitions(-DLINUX -D_GNU_SOURCE -DX11)
     else ()
       add_definitions(-DLINUX -D_GNU_SOURCE)
     endif (HAS_RASPI)
 
-    if (X11_FOUND)
-      add_definitions(-DX11)
-    endif (X11_FOUND)
-    
     if (NOT JPEG_LIB)
         add_definitions(-DNO_LIBJPEG)
     endif (NOT JPEG_LIB)
@@ -31,21 +29,15 @@ if (PLUGIN_INPUT_FB)
         include_directories(/opt/vc/include/interface/vmcs_host/linux)
 
         link_directories(/opt/vc/lib)
-    endif (HAS_RASPI)
-
-    if (X11_FOUND)
+    elseif (X11_FOUND)
         include_directories(${X11_INCLUDE_DIR})
-    endif (X11_FOUND)
+    endif (HAS_RASPI)
 
     MJPG_STREAMER_PLUGIN_COMPILE(input_fb input_fb.c jpeg_utils.c)
 
     if (JPEG_LIB)
       if (HAS_RASPI)
-        if (X11_FOUND)
-          target_link_libraries(input_fb ${JPEG_LIB} ${X11_LIBRARIES} bcm_host)
-        else ()
           target_link_libraries(input_fb ${JPEG_LIB} bcm_host)
-        endif (X11_FOUND)
       elseif (X11_FOUND)
           target_link_libraries(input_fb ${JPEG_LIB} ${X11_LIBRARIES})
       else ()
